--- a/subway_reserve/src/main/resources/templates/login.html
+++ b/subway_reserve/src/main/resources/templates/login.html
@@ -71,10 +71,10 @@
 <!--                        </ul>-->
 
                         <div class="container">
-                            <a href="/facebook" class="btn btn-primary">Facebook <span class="fa fa-facebook"></span> </a>
-                            <a href="/google" class="btn btn-danger"> Google <span class="fa fa-google-plus"></span> </a>
-                            <a href="/twitter" class="btn btn-primary">Twitter <span class="fa fa-twitter"></span> </a>
-                            <a href="/github" class="btn btn-primary">Github <span class="fa fa-github"></span> </a>
+                            <a href="https://www.facebook.com/" class="btn btn-primary">Facebook <span class="fa fa-facebook"></span> </a>
+                            <a href="https://www.google.com/" class="btn btn-danger"> Google <span class="fa fa-google-plus"></span> </a>
+                            <a href="https://twitter.com/" class="btn btn-primary">Twitter <span class="fa fa-twitter"></span> </a>
+                            <a href="https://github.com/" class="btn btn-primary">Github <span class="fa fa-github"></span> </a>
                         </div>
                     </div>
                 </div>
