--- a/subway_reserve/src/main/resources/templates/login.html
+++ b/subway_reserve/src/main/resources/templates/login.html
@@ -17,9 +17,16 @@
     <link rel="stylesheet" href="/auth/css/style.css">
 
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
+
+
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- import font-awesome   -->
     <link rel="stylesheet" href="/webjars/font-awesome/css/font-awesome.min.css" />
+
+    <!-- import google font  -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -29,12 +36,12 @@
         <div class="container">
             <div class="signin-content">
                 <div class="signin-image">
-                    <figure><img src="/auth/images/signin-image.jpg" alt="sing up image"></figure>
-                    <a href="/signup" class="signup-image-link">Create an account</a>
+                    <figure><img src="/auth/images/login.png" alt="sing up image"></figure>
+                    <a href="/signup" class="signup-image-link" style="font-family: 'Roboto', sans-serif; color:blue">Create your account</a>
                 </div>
 
                 <div class="signin-form">
-                    <h2 class="form-title">Login</h2>
+                    <h2 class="form-title" style="font-family: 'Roboto', sans-serif; color:blue">Login</h2>
                     <form method="POST" class="register-form" id="login-form" th:action="@{/login}">
                         <div class="form-group">
                             <label for="email"><i class="zmdi zmdi-account material-icons-name"></i></label>
@@ -46,7 +53,9 @@
                         </div>
                         <div class="form-group">
                             <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
-                            <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
+                            <label for="remember-me" class="label-agree-term" style="font-family: 'Roboto', sans-serif; color:blue">
+                                <span><span></span></span>
+                                Remember me</label>
                         </div>
                         <div class="form-group form-button">
                             <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
@@ -56,19 +65,13 @@
                         Invalid email or password
                     </div>
                     <div class="social-login">
-<!--                        <span class="social-label">Or login with</span>-->
-<!--                        <ul class="socials">-->
-<!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>&ndash;&gt;-->
+                        <!--                        <span class="social-label">Or login with</span>-->
+                        <!--                        <ul class="socials">-->
+                        <!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>&ndash;&gt;-->
+                        <!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>&ndash;&gt;-->
+                        <!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>&ndash;&gt;-->
+                        <!--                        </ul>-->
 
-<!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-linkedin"></i></a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-github"></i></a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>&ndash;&gt;-->
-
-
-<!--                        </ul>-->
 
                         <div class="container">
                             <a href="https://www.facebook.com/" class="btn btn-primary">Facebook <span class="fa fa-facebook"></span> </a>
