--- a/subway_reserve/src/main/resources/static/dashboard/html/css/style.css
+++ b/subway_reserve/src/main/resources/static/dashboard/html/css/style.css
@@ -1966,6 +1966,7 @@ File: scss
       background: rgba(0, 0, 0, 0.05); }
   .topbar .profile-pic {
     width: 30px;
+    background: #ffffff;
     border-radius: 100%; }
   .topbar .dropdown-menu {
     box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
