--- a/subway_reserve/src/main/resources/templates/login.html
+++ b/subway_reserve/src/main/resources/templates/login.html
@@ -57,20 +57,14 @@
                                 <span><span></span></span>
                                 Remember me</label>
                         </div>
-                        <div class="form-group form-button">
+                        <div class="form-group form-button" href="/dashboard.html">
                             <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
                         </div>
                     </form>
-                    <div id="errors" class="text-danger" th:if="${(param.error != null) and (param.error[0] == 'true')}">
-                        Invalid email or password
-                    </div>
+<!--                    <div id="errors" class="text-danger" th:if="${(param.error != null) and (param.error[0] == 'true')}">-->
+<!--                        Invalid email or password-->
+<!--                    </div>-->
                     <div class="social-login">
-                        <!--                        <span class="social-label">Or login with</span>-->
-                        <!--                        <ul class="socials">-->
-                        <!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>&ndash;&gt;-->
-                        <!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>&ndash;&gt;-->
-                        <!--&lt;!&ndash;                            <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>&ndash;&gt;-->
-                        <!--                        </ul>-->
 
 
                         <div class="container">
