--- a/subway_reserve/src/main/resources/templates/signup.html
+++ b/subway_reserve/src/main/resources/templates/signup.html
@@ -40,146 +40,87 @@
                             Sign Up
                         </h1>
                     </div>
-                    <form action="#" method="POST" class="register-form" id="register-form" >
+
+
+
+
+
+
+
+
+
+                    <!-- Spring MVC  POST METHOD for rending data to frontend   -->
+
+                    <form action="#" method="POST" class="register-form" id="register-form" th:action="@{/signup}"
+                          th:object="${user}">
                         <div class="form-group">
                             <label for="firstName"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                            <input type="text"  name="firstName" id="firstName"
+                            <input type="text" th:field="*{firstName}" name="firstName" id="firstName"
                                    placeholder="First Name"/>
-                            <small class="text-danger"></small>
+<!--                            <small class="text-danger" th:if="${#fields.hasErrors('firstName')}"-->
+<!--                                   th:errors="*{firstName}"></small>-->
                         </div>
 
                         <div class="form-group">
                             <label for="lastName"><i class="zmdi zmdi-account-o"></i></label>
-                            <input type="text"  name="lastName" id="lastName"
+                            <input type="text" th:field="*{lastName}" name="lastName" id="lastName"
                                    placeholder="Last Name"/>
-                            <small class="text-danger" ></small>
+<!--                            <small class="text-danger" th:if="${#fields.hasErrors('lastName')}"-->
+<!--                                   th:errors="*{lastName}"></small>-->
                         </div>
 
                         <div class="form-group">
                             <label for="email"><i class="zmdi zmdi-email"></i></label>
-                            <input type="email"  name="email" id="email" placeholder="Your Email"/>
-                            <small class="text-danger"></small>
+                            <input type="email" th:field="*{email}" name="email" id="email" placeholder="Your Email"/>
+<!--                            <small class="text-danger" th:if="${#fields.hasErrors('email')}"-->
+<!--                                   th:errors="*{email}"></small>-->
                         </div>
 
                         <div class="form-group">
                             <label for="password"><i class="zmdi zmdi-lock"></i></label>
-                            <input type="password" name="password" id="password"
+                            <input type="password" th:field="*{password}" name="password" id="password"
                                    placeholder="Password"/>
-                            <small class="text-danger"></small>
+<!--                            <small class="text-danger" th:if="${#fields.hasErrors('password')}"-->
+<!--                                   th:errors="*{password}"></small>-->
                         </div>
 
-                        <div class="form-group">
-                            <label for="agencyName"><i class="zmdi zmdi-layers"></i></label>
-                            <input type="text" name="agencyName" id="agencyName"
-                                   placeholder="Agency Name"/>
-                            <small class="text-danger" ></small>
-                        </div>
+<!--                        <div class="form-group">-->
+<!--                            <label for="agencyName"><i class="zmdi zmdi-layers"></i></label>-->
+<!--                            <input type="text" th:field="*{agencyName}" name="agencyName" id="agencyName"-->
+<!--                                   placeholder="Agency Name"/>-->
+<!--                            <small class="text-danger" th:if="${#fields.hasErrors('agencyName')}"-->
+<!--                                   th:errors="*{agencyName}"></small>-->
+<!--                        </div>-->
+
+<!--                        <div class="form-group">-->
+<!--                            <label for="agencyDetails"><i class="zmdi zmdi-assignment"></i></label>-->
+<!--                            <input type="text" th:field="*{agencyDetails}" name="agencyDetails" id="agencyDetails"-->
+<!--                                   placeholder="Agency Details"/>-->
+<!--                            <small class="text-danger" th:if="${#fields.hasErrors('agencyDetails')}"-->
+<!--                                   th:errors="*{agencyDetails}"></small>-->
+<!--                        </div>-->
+
 
                         <div class="form-group">
-                            <label for="agencyDetails"><i class="zmdi zmdi-assignment"></i></label>
-                            <input type="text"  name="agencyDetails" id="agencyDetails"
-                                   placeholder="Agency Details"/>
-                            <small class="text-danger"
-                            ></small>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="mobileNumber"><i class="zmdi zmdi-phone"></i></label>
-                            <input type="text"  name="mobileNumber" id="mobileNumber"
+                            <label for="phoneNumber"><i class="zmdi zmdi-phone"></i></label>
+                            <input type="text" th:field="*{phoneNumber}" name="phoneNumber" id="phoneNumber"
                                    placeholder="Contact Number"/>
-                            <small class="text-danger"
-                            ></small>
+                            <small class="text-danger" th:if="${#fields.hasErrors('phoneNumber')}"
+                                   th:errors="*{phoneNumber}"></small>
                         </div>
 
                         <div class="form-group">
                             <input type="checkbox" name="agree-term" id="agree-term" class="agree-term"/>
-                            <label for="agree-term" class="label-agree-term" style="font-family: 'Roboto', sans-serif; color:blue">
-                                <span><span></span></span>
-                                I agree all statements in
-                                <a href="#" class="term-service" style="font-family: 'Roboto', sans-serif; color:blue">
-                                    Terms of service
-                                </a>
-                            </label>
+                            <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all
+                                statements in <a href="#" class="term-service">Terms of service</a></label>
                         </div>
                         <div class="form-group form-button">
                             <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>
                         </div>
-
-                        <div class="social-login">
-                            <div class="container">
-                                <a href="https://www.facebook.com/" class="btn btn-primary">Facebook <span class="fa fa-facebook"></span> </a>
-                                <a href="https://www.google.com/" class="btn btn-danger"> Google <span class="fa fa-google-plus"></span> </a>
-                                <a href="https://twitter.com/" class="btn btn-primary">Twitter <span class="fa fa-twitter"></span> </a>
-                                <a href="https://github.com/" class="btn btn-primary">Github <span class="fa fa-github"></span> </a>
-                            </div>
-                        </div>
                     </form>
-                    <!--                    <form action="#" method="POST" class="register-form" id="register-form" th:action="@{/signup}"-->
-                    <!--                          th:object="${adminSignupFormData}">-->
-                    <!--                        <div class="form-group">-->
-                    <!--                            <label for="firstName"><i class="zmdi zmdi-account material-icons-name"></i></label>-->
-                    <!--                            <input type="text" th:field="*{firstName}" name="firstName" id="firstName"-->
-                    <!--                                   placeholder="First Name"/>-->
-                    <!--                            <small class="text-danger" th:if="${#fields.hasErrors('firstName')}"-->
-                    <!--                                   th:errors="*{firstName}"></small>-->
-                    <!--                        </div>-->
 
-                    <!--                        <div class="form-group">-->
-                    <!--                            <label for="lastName"><i class="zmdi zmdi-account-o"></i></label>-->
-                    <!--                            <input type="text" th:field="*{lastName}" name="lastName" id="lastName"-->
-                    <!--                                   placeholder="Last Name"/>-->
-                    <!--                            <small class="text-danger" th:if="${#fields.hasErrors('lastName')}"-->
-                    <!--                                   th:errors="*{lastName}"></small>-->
-                    <!--                        </div>-->
 
-                    <!--                        <div class="form-group">-->
-                    <!--                            <label for="email"><i class="zmdi zmdi-email"></i></label>-->
-                    <!--                            <input type="email" th:field="*{email}" name="email" id="email" placeholder="Your Email"/>-->
-                    <!--                            <small class="text-danger" th:if="${#fields.hasErrors('email')}"-->
-                    <!--                                   th:errors="*{email}"></small>-->
-                    <!--                        </div>-->
 
-                    <!--                        <div class="form-group">-->
-                    <!--                            <label for="password"><i class="zmdi zmdi-lock"></i></label>-->
-                    <!--                            <input type="password" th:field="*{password}" name="password" id="password"-->
-                    <!--                                   placeholder="Password"/>-->
-                    <!--                            <small class="text-danger" th:if="${#fields.hasErrors('password')}"-->
-                    <!--                                   th:errors="*{password}"></small>-->
-                    <!--                        </div>-->
-
-                    <!--                        <div class="form-group">-->
-                    <!--                            <label for="agencyName"><i class="zmdi zmdi-layers"></i></label>-->
-                    <!--                            <input type="text" th:field="*{agencyName}" name="agencyName" id="agencyName"-->
-                    <!--                                   placeholder="Agency Name"/>-->
-                    <!--                            <small class="text-danger" th:if="${#fields.hasErrors('agencyName')}"-->
-                    <!--                                   th:errors="*{agencyName}"></small>-->
-                    <!--                        </div>-->
-
-                    <!--                        <div class="form-group">-->
-                    <!--                            <label for="agencyDetails"><i class="zmdi zmdi-assignment"></i></label>-->
-                    <!--                            <input type="text" th:field="*{agencyDetails}" name="agencyDetails" id="agencyDetails"-->
-                    <!--                                   placeholder="Agency Details"/>-->
-                    <!--                            <small class="text-danger" th:if="${#fields.hasErrors('agencyDetails')}"-->
-                    <!--                                   th:errors="*{agencyDetails}"></small>-->
-                    <!--                        </div>-->
-
-                    <!--                        <div class="form-group">-->
-                    <!--                            <label for="phoneNumber"><i class="zmdi zmdi-phone"></i></label>-->
-                    <!--                            <input type="text" th:field="*{phoneNumber}" name="phoneNumber" id="phoneNumber"-->
-                    <!--                                   placeholder="Contact Number"/>-->
-                    <!--                            <small class="text-danger" th:if="${#fields.hasErrors('phoneNumber')}"-->
-                    <!--                                   th:errors="*{phoneNumber}"></small>-->
-                    <!--                        </div>-->
-
-                    <!--                        <div class="form-group">-->
-                    <!--                            <input type="checkbox" name="agree-term" id="agree-term" class="agree-term"/>-->
-                    <!--                            <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all-->
-                    <!--                                statements in <a href="#" class="term-service">Terms of service</a></label>-->
-                    <!--                        </div>-->
-                    <!--                        <div class="form-group form-button">-->
-                    <!--                            <input type="submit" name="signup" id="signup" class="form-submit" value="Register"/>-->
-                    <!--                        </div>-->
-                    <!--                    </form>-->
                 </div>
                 <div class="signup-image">
                     <figure><img src="/auth/images/signup.png" alt="sing up image"></figure>
